oxifft-codegen/tests/compile_fail/notw_non_literal.rs
use oxifft_codegen::gen_notw_codelet;

gen_notw_codelet!(foo);

fn main() {}
