oxifft-codegen/tests/compile_fail/notw_non_literal.stderr
error: expected integer literal
 --> tests/compile_fail/notw_non_literal.rs:3:19
  |
3 | gen_notw_codelet!(foo);
  |                   ^^^
